# Genealograph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CMakeLists.txt.temp  Genealograph_de_DE.ts  adddescentdialog.cpp  adddescentdialog.h  addpartnershipdialog.cpp  addpartnershipdialog.h  addpersondialog.cpp  addpersondialog.h  biographyeditor.cpp  biographyeditor.h  biographylistitem.cpp  biographylistitem.h  clicklabel.cpp  clicklabel.h  data.h  dockwidget.cpp  dockwidget.h  iohandler.cpp  iohandler.h  listlabel.cpp  listlabel.h  main.cpp  mainwindow.cpp  mainwindow.h  partnershipinfo.cpp  partnershipinfo.h  partnershipinfolistitem.cpp  partnershipinfolistitem.h  printsheetdialog.cpp  printsheetdialog.h  relation.cpp  relation.h  relationseditor.cpp  relationseditor.h  relationslistitem.cpp  relationslistitem.h  setupsheetdialog.cpp  setupsheetdialog.h  treeobject.cpp  (+3 more)
